[package]
name = "sfi-core"
version = "0.0.0"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/sfi-core"
homepage = "https://github.com/Bernd-L/sfi-core#readme"
readme = "README.md"
documentation = "https://docs.rs/sfi-core"
description = "Manage shared food inventories (core library)"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
